tests/fixtures/errors/missing-import/src/main.ts
import { nonExistent } from './does-not-exist';
console.log(nonExistent);